--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,165 @@
-node_modules
-dist
+# Dependencies
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
+# Build outputs
+dist/
+build/
+*.local
+
+# Environment variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# IDE and editor files
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
 .DS_Store
+Thumbs.db
+
+# Logs
+logs/
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
+# Runtime data
+pids/
+*.pid
+*.seed
+*.pid.lock
+
+# Coverage directory used by tools like istanbul
+coverage/
+*.lcov
+
+# nyc test coverage
+.nyc_output/
+
+# TypeScript cache
+*.tsbuildinfo
+
+# Optional npm cache directory
+.npm
+
+# Optional eslint cache
+.eslintcache
+
+# Cache directories
+.cache/
+cache/
+.tmp/
+.parcel-cache
+
+# Temporary folders
+tmp/
+temp/
+
+# Docker volumes and data (IMPORTANT: Keep this to avoid committing large data files)
+volumes/
+!volumes/.gitkeep
+
+# Docker Compose override files
+docker-compose.override.yml
+docker-compose.override.yaml
+
+# Database files
+*.db
+*.sqlite
+*.sqlite3
+
+# Redis dump files
+dump.rdb
+
+# PostgreSQL data directory
+pg_data/
+postgres_data/
+
+# RabbitMQ data
+rabbitmq_data/
+
+# Grafana data
+grafana_data/
+
+# Prometheus data
+prometheus_data/
+
+# Loki data
+loki_data/
+
+# File uploads (keep directory structure but ignore uploaded files)
+uploads/*
+!uploads/.gitkeep
+!uploads/README.md
+
+# Generated files
+generated/
+auto-generated/
+
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Windows files
+Desktop.ini
+$RECYCLE.BIN/
+*.cab
+*.msi
+*.msm
+*.msp
+*.lnk
+
+# Backup files
+*.backup
+*.bak
+*.old
+*.orig
+
+# Certificate files
+*.pem
+*.key
+*.crt
+*.csr
+*.p12
+*.pfx
+
+# Secret files
+secrets/
+.secrets/
+*.secret
+
+# Test results
+test-results/
+
+# Archive files
+*.zip
+*.tar.gz
+*.rar
+*.7z
+
+# Legacy files
 server/public
 vite.config.ts.*
-*.tar.gz
+
+# Debug files
+debug/
+.debug/
+*.debug
