--- a/package.json
+++ b/package.json
@@ -100,6 +100,7 @@
     "@types/passport-local": "^1.0.38",
     "@types/react": "^18.3.11",
     "@types/react-beautiful-dnd": "^13.1.8",
+    "@types/react-big-calendar": "^1.16.2",
     "@types/react-dom": "^18.3.1",
     "@types/ws": "^8.5.13",
     "@vitejs/plugin-react": "^4.3.2",
